--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,3 +39,8 @@ header {
   text-decoration: solid;
   box-shadow: 10px 5px 5px rgb(36, 35, 35);
 }
+
+.pexel-img {
+  display:flex;
+  flex-direction: column;
+}
