--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,23 @@
+:root {
+  --gradient-color: linear-gradient(to bottom right, rgba(21, 255, 0, 0.295), rgba(22, 56, 151, 0.356));
+  --border-color: rgb(20, 33, 220);
+  --box-shadow:rgb(36, 35, 35);
+  --box-shadow-hover:rgb(223, 220, 9);
+}
+
 * {
   box-sizing: border-box;
 }
 
 body {
-  background-image: linear-gradient(to bottom right, rgba(21, 255, 0, 0.295), rgba(22, 56, 151, 0.356));
+  background-image: var(--gradient-color);
 }
 
 .foodlist li {
   border: solid;
-  border-color: rgb(20, 33, 220);;
+  border-color: rgb(20, 33, 220);
   border-radius: 5px;
-  background-image: linear-gradient(to top right, rgba(31, 12, 199, 0.295), rgba(22, 56, 151, 0.356));
+  background-image: var(--gradient-color);
   padding: 0px;
   margin: 3px;
   color: white;
@@ -20,13 +27,13 @@ body {
 .foodlist li button {
   margin-top: 5px;
   background-color: initial;
-  background-image: linear-gradient(to top right, rgba(21, 255, 0), rgba(22, 56, 151));
+  background-image: var(--gradient-color);
   border-radius: 6px;
-  box-shadow: rgba(0, 0, 0, 0.1) 0 2px 4px;
+  box-shadow:10px 5px 5px var(--box-shadow);
   color: #FFFFFF;
   cursor: pointer;
   display: inline-block;
-  font-family: Arial,sans-serif;
+  font-family: Arial, sans-serif;
   height: 40px;
   line-height: 40px;
   outline: 0;
@@ -47,7 +54,7 @@ body {
 }
 
 ul li button:hover {
-  box-shadow: rgb(223, 220, 9) 0 3px 8px;
+  box-shadow: 0 3px 8px var(--box-shadow-hover);
 }
 
 #foodcard {
@@ -57,11 +64,11 @@ ul li button:hover {
 
 header {
   border: solid;
-  border-color: rgb(20, 33, 220);
-  background-image: linear-gradient(to bottom right, rgba(21, 255, 0, 0.295), rgba(22, 56, 151, 0.356));
+  border-color: var(--border-color);
+  background-image: var(--gradient-color);
   text-decoration: solid;
   border-radius: 10px;
-  box-shadow: 10px 5px 5px rgb(36, 35, 35);
+  box-shadow: 10px 5px 5px  var(--box-shadow);
   margin: 10px;
   margin-right: 5%;
 }
@@ -75,10 +82,10 @@ header {
   margin-right: 5%;
   border-radius: 10px;
   border: solid;
-  border-color: rgb(20, 33, 220);
-  background-image: linear-gradient(to bottom right, rgba(21, 255, 0, 0.295), rgba(22, 56, 151, 0.356));
+  border-color: var(--border-color);
+  background-image: var(--gradient-color);
   text-decoration: solid;
-  box-shadow: 10px 5px 5px rgb(36, 35, 35);
+  box-shadow:  10px 5px 5px var(--box-shadow);
 }
 
 #search-container {
@@ -87,10 +94,10 @@ header {
   height: fit-content;
   border-radius: 10px;
   border: solid;
-  border-color: rgb(20, 33, 220);
-  background-image: linear-gradient(to bottom right, rgba(21, 255, 0, 0.295), rgba(22, 56, 151, 0.356));
+  border-color: var(--border-color);
+  background-image: var(--gradient-color);
   text-decoration: solid;
-  box-shadow: 10px 5px 5px rgb(36, 35, 35);
+  box-shadow: 10px 5px 5px  var(--box-shadow);
   margin-top: 10px;
   margin-left: 10px;
 }
@@ -101,15 +108,31 @@ header {
   height: fit-content;
   padding: 10px;
   margin-right: 5%;
+  border-radius:10px;
+  border: solid;
+  border-color: var(--border-color);
+  background-image: var(--gradient-color);
+  text-decoration: solid;
+  box-shadow:  10px 5px 5px  var(--box-shadow);
+  margin-top: 10px;
+  margin-left: 10px;
+  }
+  
+#card-container {
+  float: right;
+  width: 60%;
+  height: fit-content;
+  padding: 10px;
+  margin-right: 5%;
   border-radius: 10px;
   border: solid;
-  border-color: rgb(20, 33, 220);
-  background-image: linear-gradient(to bottom right, rgba(21, 255, 0, 0.295), rgba(22, 56, 151, 0.356));
+  border-color: var(--border-color);
+  background-image: var(--gradient-color);
   text-decoration: solid;
-  box-shadow: 10px 5px 5px rgb(36, 35, 35);
-}
-
+  box-shadow:  10px 5px 5px  var(--box-shadow);
+  }
+  
 .pexel-img {
   display:flex;
   flex-direction: column;
-}
+  }
