--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,6 +124,34 @@ header {
   margin-top: 10px;
   margin-left: 10px;
   }
+.footer-container {
+    float:left;
+    bottom: 0;
+    width: 95%;
+    height: auto;
+    padding: 10px;
+    margin: 10px;
+    margin-right: 5%;
+    border-radius: 10px;
+    border: solid;
+    border-color: var(--border-color);
+    background-color: var(--section-color);
+    text-decoration: solid;
+    box-shadow:  10px 5px 5px var(--box-shadow);
+}
+.footer {
+  width: 90%;
+  height: 40vh;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 0 auto;
+}
+.footer-heading {
+  display: flex;
+  flex-direction: column;
+  margin-right: 4rem;
+}
 
 .card{
   background-color: var( --light-section);
